--- a/WordPress/Resources/tr.lproj/Localizable.strings
+++ b/WordPress/Resources/tr.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-07-08 12:54:08+0000 */
+/* Translation-Revision-Date: 2021-07-21 17:20:54+0000 */
 /* Plural-Forms: nplurals=2; plural=n > 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: tr */
@@ -507,7 +507,7 @@
 "Add image, or avatar, to represent this new account." = "Bu yeni hesabı temsil edecek görsel veya avatar ekleyin.";
 
 /* No comment provided by engineer. */
-"Add link" = "Add link";
+"Add link" = "Bağlantı ekle";
 
 /* No comment provided by engineer. */
 "Add link text" = "Bağlantı metni ekle";
@@ -2342,7 +2342,7 @@
 "Duplicate block" = "Bloğu çoğalt";
 
 /* No comment provided by engineer. */
-"EDIT LINK" = "EDIT LINK";
+"EDIT LINK" = "DÜZENLEME BAĞLANTISI";
 
 /* Used for Geo-tagging posts by latitude and longitude. Basic form. */
 "East" = "Doğu";
@@ -2466,16 +2466,16 @@
 "Email sent!" = "E-posta gönderildi!";
 
 /* translators: accessibility text. %s: Embed caption. */
-"Embed caption. %s" = "Embed caption. %s";
+"Embed caption. %s" = "Gömme başlığı. %s";
 
 /* translators: accessibility text. Empty Embed caption. */
-"Embed caption. Empty" = "Embed caption. Empty";
+"Embed caption. Empty" = "Gömme başlığı. Boş";
 
 /* No comment provided by engineer. */
-"Embed link" = "Embed link";
+"Embed link" = "Gömme bağlantısı";
 
 /* translators: %s: host providing embed content e.g: www.youtube.com */
-"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content.";
+"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "%s tarafından sağlanan gömülü içerik mobil düzenleyicide şu an görüntülenemiyor. Lütfen gömülü içeriği görmek için sayfaya ön izleme yapın.";
 
 /* Title for the Emoji section */
 "Emoji" = "Emoji";
@@ -2494,7 +2494,7 @@
 "Enable Quick Start for Site" = "Site için hızlı başlatmayı etkinleştir";
 
 /* Title for the button that will enable the site stats module. */
-"Enable Site Stats" = "Enable Site Stats";
+"Enable Site Stats" = "Site istatistiklerini etkinleştir";
 
 /* NSMicrophoneUsageDescription: Sentence to justify why the app asks permission from the user to access the device microphone. */
 "Enable microphone access to record sound in your videos." = "Videolarınızdaki sesleri kaydetmek için mikrofon erişimini etkinleştir.";
@@ -2506,10 +2506,10 @@
 "Enable site notifications?" = "Site bildirimleri etkinleştirilsin mi?";
 
 /* Error message shown when trying to view Stats and the stats module is disabled. */
-"Enable site stats to see detailed information about your traffic, likes, comments, and subscribers." = "Enable site stats to see detailed information about your traffic, likes, comments, and subscribers.";
+"Enable site stats to see detailed information about your traffic, likes, comments, and subscribers." = "Trafiğiniz, beğenileriniz, yorumlarınız ve aboneleriniz hakkındaki ayrıntılı bilgileri görmek için site istatistiklerini etkinleştirin.";
 
 /* Text displayed while activating the site stats module. */
-"Enabling Site Stats..." = "Enabling Site Stats...";
+"Enabling Site Stats..." = "Site istatistikleri etkinleştiriliyor...";
 
 /* Title of a row displayed on the debug screen used to display a screen that shows a list of encrypted logs */
 "Encrypted Logs" = "Şifreli günlükler";
@@ -3431,7 +3431,7 @@
 "Invalid URL. Audio file not found." = "Geçersiz URL. Ses dosyası bulunamadı.";
 
 /* No comment provided by engineer. */
-"Invalid URL. Please enter a valid URL." = "Invalid URL. Please enter a valid URL.";
+"Invalid URL. Please enter a valid URL." = "Geçersiz adres. Lütfen geçerli bir adres girin.";
 
 /* Error message generated when announcement service is unable to return a valid endpoint. */
 "Invalid endpoint" = "Geçersiz uç nokta";
@@ -3482,7 +3482,7 @@
 "Jetpack %@ or later is required. Do you want to update Jetpack?" = "İstatistikler için Jetpack %@ veya sonraki sürümü gerekir. Jetpack’in sürümünü güncelleştirmek ister misiniz?";
 
 /* Message for Jetpack users that have multisite WP installation, thus Restore is not available. %1$@ is a placeholder for the string 'visit our documentation page'. */
-"Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@." = "Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@.";
+"Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@." = "Çoklu siteler için Jetpack yedekleri indirilebilir yedek dosyaları sunar, tek tıkla geri yükleme yoktur. Daha fazla bilgi için %1$@.";
 
 /* Title of the button which opens the Jetpack FAQ page. */
 "Jetpack FAQ" = "Jetpack SSS";
@@ -3831,7 +3831,7 @@
 "Logs" = "Kütükler";
 
 /* Title for the error view when the stats module is disabled. */
-"Looking for stats?" = "Looking for stats?";
+"Looking for stats?" = "İstatistiklere mi ihtiyacınız var?";
 
 /* Used with posts that are geo-tagged. Let's the user know the the app is looking up the address for the coordinates tagging the post. */
 "Looking up address..." = "Adres aranıyor...";
@@ -4234,7 +4234,7 @@
 "No Items" = "Öge yok";
 
 /* Title when users have no Jetpack sites. */
-"No Jetpack sites found" = "No Jetpack sites found";
+"No Jetpack sites found" = "Hiçbir Jetpack sitesi bulunamadı";
 
 /* Menus selection title for setting a location to not use a menu. */
 "No Menu" = "Menü yok";
@@ -8025,7 +8025,7 @@
 "We're restoring your site back to %1$@." = "Siteniz %1$@ konumuna geri yükleniyor.";
 
 /* Description for label when the user's site is a multisite. */
-"We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time." = "We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time.";
+"We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time." = "Üzgünüz, Jetpack Tarama henüz çoklu site WordPress yüklemelerine uyumlu değil.";
 
 /* A hint to users indicating a link to the downloadable backup file has also been sent to their email. */
 "We've also emailed you a link to your file." = "Ayrıca dosyanızın bağlantısı da e-postayla adresinize gönderildi.";
@@ -8208,7 +8208,7 @@
 "WordPress for iOS Support" = "iOS için WordPress desteği";
 
 /* Title for label when the user's site is a multisite. */
-"WordPress multisites are not supported" = "WordPress multisites are not supported";
+"WordPress multisites are not supported" = "WordPress çoklu siteleri desteklenmiyor";
 
 /* Explaining to the user why the app needs access to the device location. */
 "WordPress needs permission to access your device's current location in order to add it to your post. Please update your privacy settings." = "WordPress mevcut yazıya konum bilgileri ekleyebilmek için cihazınızın şu anki konumuna erişme iznine ihtiyaç duyuyor. Lütfen gizlilik ayarlarınızı güncelleyin.";
@@ -8640,7 +8640,7 @@
 "viewer" = "izleyici";
 
 /* Portion of a message for Jetpack users that have multisite WP installation, thus Restore is not available. This part is a link, colored with a different color. */
-"visit our documentation page" = "visit our documentation page";
+"visit our documentation page" = "belgeler sayfamızı ziyaret edin";
 
 /* Second part of delete screen title stating [the site] will be unavailable in the future. */
 "will be unavailable in the future." = "gelecekte kullanılamayacak.";
