--- a/WordPress/Resources/de.lproj/Localizable.strings
+++ b/WordPress/Resources/de.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-07-07 11:54:07+0000 */
+/* Translation-Revision-Date: 2021-07-23 12:54:08+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: de */
@@ -507,7 +507,7 @@
 "Add image, or avatar, to represent this new account." = "Füge ein Bild oder einen Avatar hinzu, der dieses neue Konto repräsentiert.";
 
 /* No comment provided by engineer. */
-"Add link" = "Add link";
+"Add link" = "Link hinzufügen";
 
 /* No comment provided by engineer. */
 "Add link text" = "Linktext hinzufügen";
@@ -2342,7 +2342,7 @@
 "Duplicate block" = "Block duplizieren";
 
 /* No comment provided by engineer. */
-"EDIT LINK" = "EDIT LINK";
+"EDIT LINK" = "Link bearbeiten";
 
 /* Used for Geo-tagging posts by latitude and longitude. Basic form. */
 "East" = "Ost";
@@ -2466,16 +2466,16 @@
 "Email sent!" = "E-Mail gesendet!";
 
 /* translators: accessibility text. %s: Embed caption. */
-"Embed caption. %s" = "Embed caption. %s";
+"Embed caption. %s" = "Beschriftung einbetten %s";
 
 /* translators: accessibility text. Empty Embed caption. */
-"Embed caption. Empty" = "Embed caption. Empty";
+"Embed caption. Empty" = "Beschriftung einbetten Leer";
 
 /* No comment provided by engineer. */
-"Embed link" = "Embed link";
+"Embed link" = "Link einbetten";
 
 /* translators: %s: host providing embed content e.g: www.youtube.com */
-"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content.";
+"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "Eingebetteter Inhalt von %s kann derzeit nicht im mobilen Editor angezeigt werden. Lass dir eine Vorschau der Seite anzeigen, um den eingebetteten Inhalt zu sehen.";
 
 /* Title for the Emoji section */
 "Emoji" = "Emoji";
@@ -2494,7 +2494,7 @@
 "Enable Quick Start for Site" = "Schnellstart für die Website aktivieren";
 
 /* Title for the button that will enable the site stats module. */
-"Enable Site Stats" = "Enable Site Stats";
+"Enable Site Stats" = "Website-Statistiken aktivieren";
 
 /* NSMicrophoneUsageDescription: Sentence to justify why the app asks permission from the user to access the device microphone. */
 "Enable microphone access to record sound in your videos." = "Aktiviere den Mikrofonzugriff, um in deinen Videos Ton aufzeichnen zu können.";
@@ -2506,10 +2506,10 @@
 "Enable site notifications?" = "Website-Benachrichtigungen aktivieren?";
 
 /* Error message shown when trying to view Stats and the stats module is disabled. */
-"Enable site stats to see detailed information about your traffic, likes, comments, and subscribers." = "Enable site stats to see detailed information about your traffic, likes, comments, and subscribers.";
+"Enable site stats to see detailed information about your traffic, likes, comments, and subscribers." = "Aktiviere die Website-Statistiken, um ausführliche Informationen zu deinem Traffic, deinen Likes, Kommentaren und Abonnenten anzuzeigen.";
 
 /* Text displayed while activating the site stats module. */
-"Enabling Site Stats..." = "Enabling Site Stats...";
+"Enabling Site Stats..." = "Website-Statistiken werden aktiviert …";
 
 /* Title of a row displayed on the debug screen used to display a screen that shows a list of encrypted logs */
 "Encrypted Logs" = "Verschlüsselte Logs";
@@ -3431,7 +3431,7 @@
 "Invalid URL. Audio file not found." = "Ungültige URL. Audiodatei nicht gefunden.";
 
 /* No comment provided by engineer. */
-"Invalid URL. Please enter a valid URL." = "Invalid URL. Please enter a valid URL.";
+"Invalid URL. Please enter a valid URL." = "Ungültige URL. Bitte gib eine gültige URL ein.";
 
 /* Error message generated when announcement service is unable to return a valid endpoint. */
 "Invalid endpoint" = "Ungültiger Endpunkt";
@@ -3482,7 +3482,7 @@
 "Jetpack %@ or later is required. Do you want to update Jetpack?" = "Jetpack %@ oder höher ist erforderlich. Möchtest du Jetpack aktualisieren?";
 
 /* Message for Jetpack users that have multisite WP installation, thus Restore is not available. %1$@ is a placeholder for the string 'visit our documentation page'. */
-"Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@." = "Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@.";
+"Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@." = "Jetpack Backup für Netzwerk-Installationen bietet Backups zum Herunterladen, keine Ein-Klick-Wiederherstellungen. Für weitere Informationen %1$@.";
 
 /* Title of the button which opens the Jetpack FAQ page. */
 "Jetpack FAQ" = "Jetpack FAQ";
@@ -3831,7 +3831,7 @@
 "Logs" = "Logs";
 
 /* Title for the error view when the stats module is disabled. */
-"Looking for stats?" = "Looking for stats?";
+"Looking for stats?" = "Du suchst die Statistiken?";
 
 /* Used with posts that are geo-tagged. Let's the user know the the app is looking up the address for the coordinates tagging the post. */
 "Looking up address..." = "Suche Adresse ...";
@@ -4234,7 +4234,7 @@
 "No Items" = "Keine Elemente";
 
 /* Title when users have no Jetpack sites. */
-"No Jetpack sites found" = "No Jetpack sites found";
+"No Jetpack sites found" = "Keine Jetpack-Websites gefunden";
 
 /* Menus selection title for setting a location to not use a menu. */
 "No Menu" = "Kein Menü";
@@ -8025,7 +8025,7 @@
 "We're restoring your site back to %1$@." = "Wir stellen deine Website auf %1$@ wieder her.";
 
 /* Description for label when the user's site is a multisite. */
-"We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time." = "We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time.";
+"We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time." = "Es tut uns leid, aber Jetpack Scan ist derzeit nicht mit WordPress-Netzwerk-Installationen kompatibel.";
 
 /* A hint to users indicating a link to the downloadable backup file has also been sent to their email. */
 "We've also emailed you a link to your file." = "Wir haben dir auch einen Link zu deiner Datei per E-Mail geschickt.";
@@ -8208,7 +8208,7 @@
 "WordPress for iOS Support" = "Support für WordPress für iOS";
 
 /* Title for label when the user's site is a multisite. */
-"WordPress multisites are not supported" = "WordPress multisites are not supported";
+"WordPress multisites are not supported" = "WordPress-Netzwerke werden nicht unterstützt";
 
 /* Explaining to the user why the app needs access to the device location. */
 "WordPress needs permission to access your device's current location in order to add it to your post. Please update your privacy settings." = "WordPress benötigt deine Genehmigung, um auf den aktuellen Standort deines Geräts zuzugreifen, sodass dieser deinem Beitrag hinzugefügt werden kann. Aktualisiere deine Datenschutzeinstellungen.";
@@ -8640,7 +8640,7 @@
 "viewer" = "Leser";
 
 /* Portion of a message for Jetpack users that have multisite WP installation, thus Restore is not available. This part is a link, colored with a different color. */
-"visit our documentation page" = "visit our documentation page";
+"visit our documentation page" = "besuche unsere Dokumentationsseite";
 
 /* Second part of delete screen title stating [the site] will be unavailable in the future. */
 "will be unavailable in the future." = "wird zukünftig deaktiviert sein";
