--- a/WordPress/Resources/he.lproj/Localizable.strings
+++ b/WordPress/Resources/he.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-07-07 14:54:08+0000 */
+/* Translation-Revision-Date: 2021-07-23 11:54:07+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: he_IL */
@@ -507,7 +507,7 @@
 "Add image, or avatar, to represent this new account." = "להוסיף תמונה או תמונת פרופיל שתייצג את החשבון חדש.";
 
 /* No comment provided by engineer. */
-"Add link" = "Add link";
+"Add link" = "להוסיף קישור";
 
 /* No comment provided by engineer. */
 "Add link text" = "להוסיף טקסט לקישור";
@@ -2342,7 +2342,7 @@
 "Duplicate block" = "לשכפל בלוק";
 
 /* No comment provided by engineer. */
-"EDIT LINK" = "EDIT LINK";
+"EDIT LINK" = "ערוך קישור";
 
 /* Used for Geo-tagging posts by latitude and longitude. Basic form. */
 "East" = "מזרח";
@@ -2466,16 +2466,16 @@
 "Email sent!" = "האימייל נשלח!";
 
 /* translators: accessibility text. %s: Embed caption. */
-"Embed caption. %s" = "Embed caption. %s";
+"Embed caption. %s" = "כיתוב התמונה מוטמע. %s";
 
 /* translators: accessibility text. Empty Embed caption. */
-"Embed caption. Empty" = "Embed caption. Empty";
+"Embed caption. Empty" = "כיתוב התמונה מוטמע. ריק";
 
 /* No comment provided by engineer. */
-"Embed link" = "Embed link";
+"Embed link" = "קישור מוטמע";
 
 /* translators: %s: host providing embed content e.g: www.youtube.com */
-"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content.";
+"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "כרגע לא ניתן לצפות בתוכן מוטמע מ-%s בעורך הנייד. צפה בעמוד כדי לראות את התוכן המוטמע.";
 
 /* Title for the Emoji section */
 "Emoji" = "אמוג'י";
@@ -2494,7 +2494,7 @@
 "Enable Quick Start for Site" = "להפעיל התחלה מהירה לאתר";
 
 /* Title for the button that will enable the site stats module. */
-"Enable Site Stats" = "Enable Site Stats";
+"Enable Site Stats" = "הפעלת הנתונים הסטטיסטיים של האתר";
 
 /* NSMicrophoneUsageDescription: Sentence to justify why the app asks permission from the user to access the device microphone. */
 "Enable microphone access to record sound in your videos." = "אליך לאפשר גישה למיקרופון כדי להקליט סאונד בקובצי ווידאו.";
@@ -2506,10 +2506,10 @@
 "Enable site notifications?" = "האם להפעיל הודעות אתר?";
 
 /* Error message shown when trying to view Stats and the stats module is disabled. */
-"Enable site stats to see detailed information about your traffic, likes, comments, and subscribers." = "Enable site stats to see detailed information about your traffic, likes, comments, and subscribers.";
+"Enable site stats to see detailed information about your traffic, likes, comments, and subscribers." = "יש להפעיל את הנתונים הסטטיסטיים כדי להציג מידע מפורט אודות התעבורה, הלייקים, התגובות והמינויים שלך.";
 
 /* Text displayed while activating the site stats module. */
-"Enabling Site Stats..." = "Enabling Site Stats...";
+"Enabling Site Stats..." = "מפעיל נתונים סטטיסטיים של האתר...";
 
 /* Title of a row displayed on the debug screen used to display a screen that shows a list of encrypted logs */
 "Encrypted Logs" = "להצפין את היומנים";
@@ -3431,7 +3431,7 @@
 "Invalid URL. Audio file not found." = "כתובת URL לא תקינה. לא נמצא קובץ אודיו.";
 
 /* No comment provided by engineer. */
-"Invalid URL. Please enter a valid URL." = "Invalid URL. Please enter a valid URL.";
+"Invalid URL. Please enter a valid URL." = "כתובת URL לא תקינה. נא להזין כתובת אינטרנט תקנית";
 
 /* Error message generated when announcement service is unable to return a valid endpoint. */
 "Invalid endpoint" = "נקודת קצה לא חוקית";
@@ -3482,7 +3482,7 @@
 "Jetpack %@ or later is required. Do you want to update Jetpack?" = "נדרש Jetpack %@‎ ואילך. האם ברצונך לעדכן את Jetpack?";
 
 /* Message for Jetpack users that have multisite WP installation, thus Restore is not available. %1$@ is a placeholder for the string 'visit our documentation page'. */
-"Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@." = "Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@.";
+"Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@." = "ההתקנות של השירות Jetpack Backup for Multisite מספקות גיבויים להורדה אך לא שחזורים בלחיצה אחת. למידע נוסף %1$@.";
 
 /* Title of the button which opens the Jetpack FAQ page. */
 "Jetpack FAQ" = "שאלות נפוצות בנושא Jetpack";
@@ -3831,7 +3831,7 @@
 "Logs" = "לוגים";
 
 /* Title for the error view when the stats module is disabled. */
-"Looking for stats?" = "Looking for stats?";
+"Looking for stats?" = "רוצה להציג את הנתונים הסטטיסטיים?";
 
 /* Used with posts that are geo-tagged. Let's the user know the the app is looking up the address for the coordinates tagging the post. */
 "Looking up address..." = "מחפש כתובת...";
@@ -4234,7 +4234,7 @@
 "No Items" = "אין פריטים";
 
 /* Title when users have no Jetpack sites. */
-"No Jetpack sites found" = "No Jetpack sites found";
+"No Jetpack sites found" = "לא נמצאו אתרים של Jetpack";
 
 /* Menus selection title for setting a location to not use a menu. */
 "No Menu" = "אין תפריט";
@@ -8025,7 +8025,7 @@
 "We're restoring your site back to %1$@." = "אנחנו משחזרים את האתר שלך לגרסה מתאריך %1$@.";
 
 /* Description for label when the user's site is a multisite. */
-"We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time." = "We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time.";
+"We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time." = "מצטערים, Jetpack Scan לא תואמת להתקנות WordPress של ריבוי אתרים נכון לעכשיו.";
 
 /* A hint to users indicating a link to the downloadable backup file has also been sent to their email. */
 "We've also emailed you a link to your file." = "בנוסף, שלחנו לך הודעת אימייל עם קישור לקובץ שלך.";
@@ -8208,7 +8208,7 @@
 "WordPress for iOS Support" = "תמיכה ב-WordPress ל-iOS";
 
 /* Title for label when the user's site is a multisite. */
-"WordPress multisites are not supported" = "WordPress multisites are not supported";
+"WordPress multisites are not supported" = "ריבוי אתרי WordPress אינו נתמך";
 
 /* Explaining to the user why the app needs access to the device location. */
 "WordPress needs permission to access your device's current location in order to add it to your post. Please update your privacy settings." = "WordPress זקוקה להרשאה כדי לגשת למיקום הנוכחי של המכשיר שלך כדי להוסיף אותו לפוסט. יש לעדכן את הגדרות הפרטיות.";
@@ -8640,7 +8640,7 @@
 "viewer" = "צופה";
 
 /* Portion of a message for Jetpack users that have multisite WP installation, thus Restore is not available. This part is a link, colored with a different color. */
-"visit our documentation page" = "visit our documentation page";
+"visit our documentation page" = "היכנס לעמוד המסמכים שלנו";
 
 /* Second part of delete screen title stating [the site] will be unavailable in the future. */
 "will be unavailable in the future." = "לא יהיה זמין בעתיד.";
