--- a/WordPress/Resources/id.lproj/Localizable.strings
+++ b/WordPress/Resources/id.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-07-07 11:54:07+0000 */
+/* Translation-Revision-Date: 2021-07-23 16:29:22+0000 */
 /* Plural-Forms: nplurals=2; plural=n > 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: id */
@@ -507,7 +507,7 @@
 "Add image, or avatar, to represent this new account." = "Tambahkan gambar, atau avatar, untuk mewakili akun baru ini.";
 
 /* No comment provided by engineer. */
-"Add link" = "Add link";
+"Add link" = "Tambahkan tautan";
 
 /* No comment provided by engineer. */
 "Add link text" = "Tambahkan teks tautan";
@@ -2342,7 +2342,7 @@
 "Duplicate block" = "Duplikasi blok";
 
 /* No comment provided by engineer. */
-"EDIT LINK" = "EDIT LINK";
+"EDIT LINK" = "EDIT TAUTAN";
 
 /* Used for Geo-tagging posts by latitude and longitude. Basic form. */
 "East" = "Timur";
@@ -2466,16 +2466,16 @@
 "Email sent!" = "Email terkirim!";
 
 /* translators: accessibility text. %s: Embed caption. */
-"Embed caption. %s" = "Embed caption. %s";
+"Embed caption. %s" = "Sematkan keterangan. %s";
 
 /* translators: accessibility text. Empty Embed caption. */
-"Embed caption. Empty" = "Embed caption. Empty";
+"Embed caption. Empty" = "Sematkan keterangan. Kosong";
 
 /* No comment provided by engineer. */
-"Embed link" = "Embed link";
+"Embed link" = "Sematkan tautan";
 
 /* translators: %s: host providing embed content e.g: www.youtube.com */
-"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content.";
+"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "Konten yang disematkan dari %s tidak dapat ditampilkan di editor seluler saat ini. Silakan buka pratinjau halaman untuk melihat konten yang disematkan.";
 
 /* Title for the Emoji section */
 "Emoji" = "Emotikon";
@@ -2494,7 +2494,7 @@
 "Enable Quick Start for Site" = "Aktifkan Mulai Cepat untuk Situs";
 
 /* Title for the button that will enable the site stats module. */
-"Enable Site Stats" = "Enable Site Stats";
+"Enable Site Stats" = "Aktifkan Statistik Situs";
 
 /* NSMicrophoneUsageDescription: Sentence to justify why the app asks permission from the user to access the device microphone. */
 "Enable microphone access to record sound in your videos." = "Izinkan akses mikrofon untuk merekam suara di video Anda.";
@@ -2506,10 +2506,10 @@
 "Enable site notifications?" = "Aktifkan pemberitahuan situs?";
 
 /* Error message shown when trying to view Stats and the stats module is disabled. */
-"Enable site stats to see detailed information about your traffic, likes, comments, and subscribers." = "Enable site stats to see detailed information about your traffic, likes, comments, and subscribers.";
+"Enable site stats to see detailed information about your traffic, likes, comments, and subscribers." = "Aktifkan statistik situs untuk melihat detail informasi tentang lalu lintas kunjungan, suka, komentar, dan pelanggan Anda.";
 
 /* Text displayed while activating the site stats module. */
-"Enabling Site Stats..." = "Enabling Site Stats...";
+"Enabling Site Stats..." = "Mengaktifkan Statistik Situs...";
 
 /* Title of a row displayed on the debug screen used to display a screen that shows a list of encrypted logs */
 "Encrypted Logs" = "Log Terenkripsi";
@@ -3431,7 +3431,7 @@
 "Invalid URL. Audio file not found." = "URL tidak valid. Berkas audio tidak ditemukan.";
 
 /* No comment provided by engineer. */
-"Invalid URL. Please enter a valid URL." = "Invalid URL. Please enter a valid URL.";
+"Invalid URL. Please enter a valid URL." = "URL tidak valid. Silakan masukkan URL yang benar.";
 
 /* Error message generated when announcement service is unable to return a valid endpoint. */
 "Invalid endpoint" = "Titik akhir tidak valid";
@@ -3482,7 +3482,7 @@
 "Jetpack %@ or later is required. Do you want to update Jetpack?" = "Jetpack %@ atau yang lebih baru diperlukan. Apakah Anda ingin memperbarui Jetpack?";
 
 /* Message for Jetpack users that have multisite WP installation, thus Restore is not available. %1$@ is a placeholder for the string 'visit our documentation page'. */
-"Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@." = "Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@.";
+"Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@." = "Pemasangan Jetpack Backup untuk Multisitus memberikan fitur cadangan yang bisa diunduh, tanpa fitur permulihan sekali klik. Untuk informasi lebih lanjut %1$@.";
 
 /* Title of the button which opens the Jetpack FAQ page. */
 "Jetpack FAQ" = "FAQ Jetpack";
@@ -3831,7 +3831,7 @@
 "Logs" = "Log";
 
 /* Title for the error view when the stats module is disabled. */
-"Looking for stats?" = "Looking for stats?";
+"Looking for stats?" = "Mencari statistik?";
 
 /* Used with posts that are geo-tagged. Let's the user know the the app is looking up the address for the coordinates tagging the post. */
 "Looking up address..." = "Mencari alamat...";
@@ -4234,7 +4234,7 @@
 "No Items" = "Tak ada Item";
 
 /* Title when users have no Jetpack sites. */
-"No Jetpack sites found" = "No Jetpack sites found";
+"No Jetpack sites found" = "Situs Jetpack tidak ditemukan";
 
 /* Menus selection title for setting a location to not use a menu. */
 "No Menu" = "Tidak Ada Menu";
@@ -8025,7 +8025,7 @@
 "We're restoring your site back to %1$@." = "Kami telah memulihkan situs Anda kembali ke %1$@.";
 
 /* Description for label when the user's site is a multisite. */
-"We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time." = "We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time.";
+"We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time." = "Mohon maaf, Jetpack Scan tidak kompatibel dengan penginstalan WordPress multisitus saat ini.";
 
 /* A hint to users indicating a link to the downloadable backup file has also been sent to their email. */
 "We've also emailed you a link to your file." = "Kami juga telah mengirimkan email berisi tautan ke file Anda.";
@@ -8208,7 +8208,7 @@
 "WordPress for iOS Support" = "WordPress untuk Dukungan iOS";
 
 /* Title for label when the user's site is a multisite. */
-"WordPress multisites are not supported" = "WordPress multisites are not supported";
+"WordPress multisites are not supported" = "Multisitus WordPress tidak didukung";
 
 /* Explaining to the user why the app needs access to the device location. */
 "WordPress needs permission to access your device's current location in order to add it to your post. Please update your privacy settings." = "WordPress membutuhkan izin untuk mengakses lokasi terkini perangkat Anda untuk ditambahkan ke pos Anda. Harap perbarui pengaturan privasi Anda.";
@@ -8640,7 +8640,7 @@
 "viewer" = "pemirsa";
 
 /* Portion of a message for Jetpack users that have multisite WP installation, thus Restore is not available. This part is a link, colored with a different color. */
-"visit our documentation page" = "visit our documentation page";
+"visit our documentation page" = "kunjungi halaman dokumentasi kami";
 
 /* Second part of delete screen title stating [the site] will be unavailable in the future. */
 "will be unavailable in the future." = "akan tidak tersedia di waktu mendatang.";
