--- a/WordPress/Resources/it.lproj/Localizable.strings
+++ b/WordPress/Resources/it.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-07-09 09:54:08+0000 */
+/* Translation-Revision-Date: 2021-07-23 11:54:08+0000 */
 /* Plural-Forms: nplurals=2; plural=n != 1; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: it */
@@ -507,7 +507,7 @@
 "Add image, or avatar, to represent this new account." = "Aggiungi un'immagine, o un avatar, per rappresentare questo nuovo account.";
 
 /* No comment provided by engineer. */
-"Add link" = "Add link";
+"Add link" = "Aggiungi link";
 
 /* No comment provided by engineer. */
 "Add link text" = "Aggiungi testo del link";
@@ -2342,7 +2342,7 @@
 "Duplicate block" = "Duplica il blocco";
 
 /* No comment provided by engineer. */
-"EDIT LINK" = "EDIT LINK";
+"EDIT LINK" = "MODIFICA LINK";
 
 /* Used for Geo-tagging posts by latitude and longitude. Basic form. */
 "East" = "Est";
@@ -2466,16 +2466,16 @@
 "Email sent!" = "Email inviata!";
 
 /* translators: accessibility text. %s: Embed caption. */
-"Embed caption. %s" = "Embed caption. %s";
+"Embed caption. %s" = "Incorpora la didascalia. %s";
 
 /* translators: accessibility text. Empty Embed caption. */
-"Embed caption. Empty" = "Embed caption. Empty";
+"Embed caption. Empty" = "Incorpora la didascalia. Vuota";
 
 /* No comment provided by engineer. */
-"Embed link" = "Embed link";
+"Embed link" = "Incorpora link";
 
 /* translators: %s: host providing embed content e.g: www.youtube.com */
-"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content.";
+"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "Al momento, i contenuti incorporati di %s non possono essere visualizzati nell'editor per dispositivi mobili. Visualizza in anteprima la pagina per vedere il contenuto incorporato.";
 
 /* Title for the Emoji section */
 "Emoji" = "Emoji";
@@ -2494,7 +2494,7 @@
 "Enable Quick Start for Site" = "Abilita avvio rapido per il sito";
 
 /* Title for the button that will enable the site stats module. */
-"Enable Site Stats" = "Enable Site Stats";
+"Enable Site Stats" = "Attiva le statistiche del sito";
 
 /* NSMicrophoneUsageDescription: Sentence to justify why the app asks permission from the user to access the device microphone. */
 "Enable microphone access to record sound in your videos." = "Abilita l'accesso al microfono per registrare l'audio nei tuoi video.";
@@ -2506,10 +2506,10 @@
 "Enable site notifications?" = "Attiva notifiche del sito?";
 
 /* Error message shown when trying to view Stats and the stats module is disabled. */
-"Enable site stats to see detailed information about your traffic, likes, comments, and subscribers." = "Enable site stats to see detailed information about your traffic, likes, comments, and subscribers.";
+"Enable site stats to see detailed information about your traffic, likes, comments, and subscribers." = "Attiva le statistiche del sito per vedere le informazioni dettagliate su traffico, Mi piace, commenti e abbonati.";
 
 /* Text displayed while activating the site stats module. */
-"Enabling Site Stats..." = "Enabling Site Stats...";
+"Enabling Site Stats..." = "Attivazione delle statistiche del sito in corso...";
 
 /* Title of a row displayed on the debug screen used to display a screen that shows a list of encrypted logs */
 "Encrypted Logs" = "Registri crittografati";
@@ -3431,7 +3431,7 @@
 "Invalid URL. Audio file not found." = "URL non valido. File audio non trovato.";
 
 /* No comment provided by engineer. */
-"Invalid URL. Please enter a valid URL." = "Invalid URL. Please enter a valid URL.";
+"Invalid URL. Please enter a valid URL." = "URL non valido. Inserisci un URL valido.";
 
 /* Error message generated when announcement service is unable to return a valid endpoint. */
 "Invalid endpoint" = "Endpoint non valido";
@@ -3482,7 +3482,7 @@
 "Jetpack %@ or later is required. Do you want to update Jetpack?" = "Jetpack %@ o successivo è necessario per accedere alle statistiche. Vuoi aggiornare Jetpack?";
 
 /* Message for Jetpack users that have multisite WP installation, thus Restore is not available. %1$@ is a placeholder for the string 'visit our documentation page'. */
-"Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@." = "Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@.";
+"Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@." = "Jetpack Backup per installazioni multisito offre backup scaricabili, nessun ripristino con un clic. Per maggiori informazioni %1$@.";
 
 /* Title of the button which opens the Jetpack FAQ page. */
 "Jetpack FAQ" = "FAQ Jetpack";
@@ -3831,7 +3831,7 @@
 "Logs" = "I log";
 
 /* Title for the error view when the stats module is disabled. */
-"Looking for stats?" = "Looking for stats?";
+"Looking for stats?" = "Cerchi le statistiche?";
 
 /* Used with posts that are geo-tagged. Let's the user know the the app is looking up the address for the coordinates tagging the post. */
 "Looking up address..." = "Ricerca indirizzo...";
@@ -4234,7 +4234,7 @@
 "No Items" = "Nessun elemento";
 
 /* Title when users have no Jetpack sites. */
-"No Jetpack sites found" = "No Jetpack sites found";
+"No Jetpack sites found" = "Nessun sito Jetpack trovato";
 
 /* Menus selection title for setting a location to not use a menu. */
 "No Menu" = "Nessun menu";
@@ -8025,7 +8025,7 @@
 "We're restoring your site back to %1$@." = "Stiamo ripristinando il tuo sito al giorno %1$@.";
 
 /* Description for label when the user's site is a multisite. */
-"We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time." = "We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time.";
+"We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time." = "Al momento, Jetpack Scan non è compatibile con installazioni WordPress multisito.";
 
 /* A hint to users indicating a link to the downloadable backup file has also been sent to their email. */
 "We've also emailed you a link to your file." = "Ti abbiamo anche inviato un'e-mail con un link al file.";
@@ -8208,7 +8208,7 @@
 "WordPress for iOS Support" = "Supporto WordPress per iOS";
 
 /* Title for label when the user's site is a multisite. */
-"WordPress multisites are not supported" = "WordPress multisites are not supported";
+"WordPress multisites are not supported" = "Multisiti WordPress non supportati";
 
 /* Explaining to the user why the app needs access to the device location. */
 "WordPress needs permission to access your device's current location in order to add it to your post. Please update your privacy settings." = "WordPress richiede il permesso di accedere alla tua posizione attuale per poterla aggiungere al tuo articolo. Aggiorna le tue impostazioni per la privacy.";
@@ -8640,7 +8640,7 @@
 "viewer" = "visitatore";
 
 /* Portion of a message for Jetpack users that have multisite WP installation, thus Restore is not available. This part is a link, colored with a different color. */
-"visit our documentation page" = "visit our documentation page";
+"visit our documentation page" = "visita la pagina della documentazione";
 
 /* Second part of delete screen title stating [the site] will be unavailable in the future. */
 "will be unavailable in the future." = "non sarà più disponibile.";
