--- a/WordPress/Resources/zh-Hant.lproj/Localizable.strings
+++ b/WordPress/Resources/zh-Hant.lproj/Localizable.strings
@@ -1,4 +1,4 @@
-/* Translation-Revision-Date: 2021-07-08 09:55:02+0000 */
+/* Translation-Revision-Date: 2021-07-23 11:54:07+0000 */
 /* Plural-Forms: nplurals=1; plural=0; */
 /* Generator: GlotPress/3.0.0-alpha.2 */
 /* Language: zh_TW */
@@ -507,7 +507,7 @@
 "Add image, or avatar, to represent this new account." = "新增圖片或大頭貼來代表這個新帳號。";
 
 /* No comment provided by engineer. */
-"Add link" = "Add link";
+"Add link" = "新增連結";
 
 /* No comment provided by engineer. */
 "Add link text" = "Add link text";
@@ -2342,7 +2342,7 @@
 "Duplicate block" = "重複區塊";
 
 /* No comment provided by engineer. */
-"EDIT LINK" = "EDIT LINK";
+"EDIT LINK" = "編輯連結";
 
 /* Used for Geo-tagging posts by latitude and longitude. Basic form. */
 "East" = "東";
@@ -2466,16 +2466,16 @@
 "Email sent!" = "已傳送電子郵件！";
 
 /* translators: accessibility text. %s: Embed caption. */
-"Embed caption. %s" = "Embed caption. %s";
+"Embed caption. %s" = "內嵌字幕。 %s";
 
 /* translators: accessibility text. Empty Embed caption. */
-"Embed caption. Empty" = "Embed caption. Empty";
+"Embed caption. Empty" = "內嵌字幕。 清空";
 
 /* No comment provided by engineer. */
-"Embed link" = "Embed link";
+"Embed link" = "內嵌連結";
 
 /* translators: %s: host providing embed content e.g: www.youtube.com */
-"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content.";
+"Embedded content from %s can't be viewed in the mobile editor at the moment. Please preview the page to see the embedded content." = "目前無法在行動編輯器中查看 %s 的內嵌內容。 請預覽頁面以查看內嵌內容。";
 
 /* Title for the Emoji section */
 "Emoji" = "表情圖示";
@@ -2494,7 +2494,7 @@
 "Enable Quick Start for Site" = "啟用網站的快速入門";
 
 /* Title for the button that will enable the site stats module. */
-"Enable Site Stats" = "Enable Site Stats";
+"Enable Site Stats" = "啟用網站統計資料";
 
 /* NSMicrophoneUsageDescription: Sentence to justify why the app asks permission from the user to access the device microphone. */
 "Enable microphone access to record sound in your videos." = "請啟用麥克風權限，以錄製影片音效。";
@@ -2506,10 +2506,10 @@
 "Enable site notifications?" = "是否要啟用網站通知？";
 
 /* Error message shown when trying to view Stats and the stats module is disabled. */
-"Enable site stats to see detailed information about your traffic, likes, comments, and subscribers." = "Enable site stats to see detailed information about your traffic, likes, comments, and subscribers.";
+"Enable site stats to see detailed information about your traffic, likes, comments, and subscribers." = "啟用網站統計資料即可查看網站詳細資訊，包括流量、按讚數、留言數和訂閱人數。";
 
 /* Text displayed while activating the site stats module. */
-"Enabling Site Stats..." = "Enabling Site Stats...";
+"Enabling Site Stats..." = "正在啟用網站統計資料…";
 
 /* Title of a row displayed on the debug screen used to display a screen that shows a list of encrypted logs */
 "Encrypted Logs" = "加密記錄";
@@ -3431,7 +3431,7 @@
 "Invalid URL. Audio file not found." = "無效網址。 找不到音訊檔案。";
 
 /* No comment provided by engineer. */
-"Invalid URL. Please enter a valid URL." = "Invalid URL. Please enter a valid URL.";
+"Invalid URL. Please enter a valid URL." = "無效網址。 請輸入正確的網址。";
 
 /* Error message generated when announcement service is unable to return a valid endpoint. */
 "Invalid endpoint" = "無效端點";
@@ -3482,7 +3482,7 @@
 "Jetpack %@ or later is required. Do you want to update Jetpack?" = "須安裝 Jetpack %@ 或更新版本。是否要更新 Jetpack？";
 
 /* Message for Jetpack users that have multisite WP installation, thus Restore is not available. %1$@ is a placeholder for the string 'visit our documentation page'. */
-"Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@." = "Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@.";
+"Jetpack Backup for Multisite installations provides downloadable backups, no one-click restores. For more information %1$@." = "Jetpack Backup for Multisite 安裝提供可下載的備份，無需一鍵還原。 詳情請見 %1$@。";
 
 /* Title of the button which opens the Jetpack FAQ page. */
 "Jetpack FAQ" = "Jetpack 常見問題";
@@ -3831,7 +3831,7 @@
 "Logs" = "記錄";
 
 /* Title for the error view when the stats module is disabled. */
-"Looking for stats?" = "Looking for stats?";
+"Looking for stats?" = "在尋找統計資料嗎？";
 
 /* Used with posts that are geo-tagged. Let's the user know the the app is looking up the address for the coordinates tagging the post. */
 "Looking up address..." = "正在查詢位址...";
@@ -4234,7 +4234,7 @@
 "No Items" = "無項目";
 
 /* Title when users have no Jetpack sites. */
-"No Jetpack sites found" = "No Jetpack sites found";
+"No Jetpack sites found" = "找不到任何 Jetpack 網站";
 
 /* Menus selection title for setting a location to not use a menu. */
 "No Menu" = "無選單";
@@ -8025,7 +8025,7 @@
 "We're restoring your site back to %1$@." = "我們正在將你的網站還原至 %1$@。";
 
 /* Description for label when the user's site is a multisite. */
-"We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time." = "We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time.";
+"We're sorry, Jetpack Scan is not compatible with multisite WordPress installations at this time." = "不好意思，Jetpack Scan 目前與多站台 WordPress 安裝不相容。";
 
 /* A hint to users indicating a link to the downloadable backup file has also been sent to their email. */
 "We've also emailed you a link to your file." = "我們也已將檔案連結透過電子郵件傳送給你。";
@@ -8208,7 +8208,7 @@
 "WordPress for iOS Support" = "支援 iOS 的 WordPress";
 
 /* Title for label when the user's site is a multisite. */
-"WordPress multisites are not supported" = "WordPress multisites are not supported";
+"WordPress multisites are not supported" = "不支援 WordPress 多站台";
 
 /* Explaining to the user why the app needs access to the device location. */
 "WordPress needs permission to access your device's current location in order to add it to your post. Please update your privacy settings." = "WordPress 需要取得你的同意以存取裝置目前的位置，並將其新增到你的文章。請更新你的隱私設定。";
@@ -8640,7 +8640,7 @@
 "viewer" = "瀏覽者";
 
 /* Portion of a message for Jetpack users that have multisite WP installation, thus Restore is not available. This part is a link, colored with a different color. */
-"visit our documentation page" = "visit our documentation page";
+"visit our documentation page" = "請造訪我們的文件頁面";
 
 /* Second part of delete screen title stating [the site] will be unavailable in the future. */
 "will be unavailable in the future." = "日後將無法使用。";
