--- a/fastlane/jetpack_metadata/de-DE/release_notes.txt
+++ b/fastlane/jetpack_metadata/de-DE/release_notes.txt
@@ -2,8 +2,8 @@ Wir haben uns um die Text-Blöcke gekümmert. Die Anpassung von Farbe und Hinter
 
 Außerdem haben wir einen Fehler bei der Blockauswahl auf iPads behoben und die Bildschirme für die Anzeige von „wird geladen“ und „fehlgeschlagen“ in der Web-Version des Editors aktualisiert.
 
-Wenn du Probleme beim Aktualisieren mit dem Folgen-Button im Reader hattest, kannst du dich jetzt auch entspannt zurücklehnen. Alle Bugs hier wurden entfernt.
+Wenn du Probleme beim Aktualisieren mit dem Folgen-Button im Reader hattest, kannst du dich jetzt entspannt zurücklehnen. Alle Probleme wurden behoben.
 
-Autoren und Mitarbeiter müssen jetzt nicht mehr im Dunkeln arbeiten! Die Kommentare können ab sofort über Meine Websites > Kommentare angezeigt werden.
+Autoren und Mitarbeiter tappen jetzt nicht mehr im Dunkeln! Kommentare einer Website können ab sofort über Meine Websites > Kommentare angezeigt werden.
 
 Wir haben einen Fehler beim Tippen auf die Benachrichtigungen behoben.
