--- a/fastlane/jetpack_metadata/zh-Hans/release_notes.txt
+++ b/fastlane/jetpack_metadata/zh-Hans/release_notes.txt
@@ -2,8 +2,8 @@
 
 其他区块编辑器更新包括：修复了 iPad 上的区块选择器的问题，更新了编辑器 Web 版本的“正在加载”和“失败”屏幕。
 
-如果您先前遇到了阅读器中如下按钮的一些刷新问题，那么现在您可以安心了，我们已经解决了这些问题。
+如果您在阅读器中遇到过关注按钮方面的一些刷新问题，那么现在您可以安心了，我们已经解决了这些问题。
 
-作者和贡献者再也不用“瞎子摸象”了！ 他们现在可以通过“我的网站”>“评论”查看网站的评论。
+作者和贡献者再也不用“瞎子摸象”了！ 他们现在可以通过“我的网站”>“评论”查看网站评论。
 
 修复了点击通知时的错误。
